# poi-simulator

./: .gitignore  pyproject.toml  setup.py
poi_simulator/: button.py  dropdown_list.py  object.py  poi.py  poi_moves.py  poi_simulator.py  radio_button.py  slider.py  text_input.py  textbox.py  tickbox.py  utils.py
