[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poi_simulator"
version = "0.0.0"
dependencies = [
    "pygame"
]
requires-python = ">=3.8"
authors = [
    {name = "Thomas Mueller", email = "tommail5@t-online.de"},
]
maintainers = [
    {name = "Thomas Mueller", email = "tommail5@t-online.de"},
]
description = "A simple simulator for Poi"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["poi", "flow arts", "juggling", "poi spinning"]
classifiers = [
    "Programming Language :: Python"
]

[project.optional-dependencies]

[project.urls]

[project.scripts]

[project.gui-scripts]
poi-simulator = "poi_simulator.poi_simulator:main"
